# esp32-captive-portal

./: Cargo.toml  LICENSE-MIT  readme.md  sdkconfig.defaults
.cargo/: config.toml
src/: captive.rs  dns.rs  main.rs
src/web/: index.html  styles.css
