[package]
name = "esp32-captive-portal"
version = "0.0.0"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
urlencoding = "2.1.3"

[build-dependencies]
embuild = "0.31.3"
